--- a/_config.yml
+++ b/_config.yml
@@ -1,39 +1,4 @@
-remote_theme: pmarsceill/just-the-docs
+theme: jekyll-theme-architect
 
-collections:
-  react:
-    permalink: "/react/index.md/"
-    output: true
-  vue:
-    permalink: "/vue/index.md/"
-    output: true
-  angular:
-    permalink: "/angular/index.md/"
-    output: true
-
-just_the_docs:
-  collections:
-    react:
-      name: React
-    vue:
-      name: Vue
-    angular:
-      name: Angular
-
-# Back to top link
-back_to_top: true
-back_to_top_text: "Back to top"
-
-footer_content: "Copyright &copy; 2021 Maksum Rifai. Distributed by an <a href="https://github.com/MaksumRifai/ui-lib/blob/main/LICENSE">MIT license.</a>"
-
-# Footer last edited timestamp
-last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
-last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
-
-# Footer "Edit this page on GitHub" link text
-gh_edit_link: true # show or hide edit this page link
-gh_edit_link_text: "Edit this page on GitHub"
-gh_edit_repository: "https://github.com/MaksumRifai/ui-lib" # the github URL for your repo
-gh_edit_branch: "main" # the branch that your docs is served from
-# gh_edit_source: docs # the source that your files originate from
-gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
+title: UI Libraries
+description: React, Vue, Angular UI Libraries
